<resources>
    <string name="app_name">MobilePhotoBooth</string>
    <string name="app_name_blank"></string>
    <string name="app_settings">Settings</string>
    <string name="app_desc">Check out Hackbook for Android to learn how you can make your android apps social using Facebook Platform.</string>
    <string name="app_action">I am using the Hackbook for Android</string>
    <string name="request_message">Learn how to make your android apps social.</string>
    <string name="request">Request!</string>
    <string name="upload">Upload Photo</string>
<string name="post">Wall Post!</string>
    <string name="delete">Delete Post</string>
    <string name="no_login">Graph API Explorer</string>
    <string name="get_permissions">Get Permissions</string>
    <string name="access_token">Access Token:</string>
    <string name="graph_domain">https://graph.facebook.com/</string>
    <string name="submit">Submit</string>
    <string name="label_output">Output:</string>
    <string name="show_metadata">Show metadata</string>
    <string name="show_picture">Show picture</string>
    <string name="view_url">URL</string>
    <string name="target_url">Target URL:</string>
    <string name="exception">Exception: </string>
    <string name="tip_label">Tip:</string>
    <string name="error">Error</string>
    <string name="facebook_error">Facebook Error: </string>
    <string name="api_response">Api Response:</string>
    <string name="view_source">View Source</string>
    <string name="view_post">View Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="source_code">Source Code:</string>
    <string name="please_wait">Please wait...</string>
    <string name="upload_progress">Uploading to Facebook...</string>
    <string name="settings_progress">Loading. Please wait...</string>
    <string name="view_photo">View Photo</string>
    <string name="hide_photo">Hide Photo</string>
    <string name="tag_photo">Tag Photo</string>
    <string name="email_photo">Email Photo</string>
    <string name="graph_button">Graph API</string>
    <string name="fql_button">FQL Query</string>
    <string name="source_tag">Source tag:</string>
    <string name="permission_source_tag">Source tag: \"perms_tag\"</string>
    <string name="Graph_FQL_title">Graph API or FQL Query?</string>
    <string name="Graph_FQL_msg">Get friends using Graph or FQL Query?\n\nWith FQL query you can sort the list by names, whereas with Graph list will be ordered by UID and can\'t be changed.</string>
    <string name="can_post_on_wall_title">Post on friend\'s wall</string>
    <string name="can_post_on_wall">Friends list fetched. You can post on friend\'s wall by clicking on the item.</string>
    <string name="ok">OK</string>
    <string name="post_on_wall_title">Post on Wall?</string>
    <string name="post_on_wall">Would you like to post on %1$s\'s wall</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string  name="get_fields">Get Fields</string>
    <string name="fields">Fields</string>
    <string name="connections">Connections</string>
    <string  name="checkin">Check-in</string>
    <string name="cancel">Cancel</string>
    <string name="user">User Data</string>
    <string name="friend">Friends Data</string>
    <string name="extended">Extended</string>
    <string name="gallery_remote_title">Upload from gallery or remote?</string>
    <string name="gallery_remote_msg">Upload picture from phone\' gallery or remote server?</string>
    <string name="gallery_button">Gallery</string>
    <string name="remote_button">Remote</string>
    <string name="get_location">Get Location?</string>
    <string name="get_default_or_new_location">Get current location or use Times Square as the location?</string>
    <string name="current_location_button">Current Location</string>
    <string name="fetching_current_permissions">Fetching current permissions...</string>
    <string name="explorer_message">Also, checkout the web-version of the <a href="http://developers.facebook.com/tools/explorer">Graph API Explorer tool</a></string>
    <string name="nearby_places">Fetching nearby places...</string>
    <string name="times_square_button">Times Square</string>
    <string name="check_in_title">Check-in?</string>
    <string name="permissions">Permissions</string>
    <string name="back_parent">Back to parent</string>
    <string name="fields_and_connections">Fields \u0026 Connections</string>
    <string name="permissions_request">Select Permissions:</string>
    <string name="permission_detail">Checkout <a href="https://developers.facebook.com/docs/authentication/permissions/">permissions reference doc</a></string>
    <string name="fetching_location">Fetching Location...</string>
    <string name="check_in_at">Would you like to check-in at %1$s?</string>
    <string name="post_tip">\'read_stream\' permission is required to view and delete the post.\n\nUse SDK dialogs to publish stories or post on friends wall. <a href="https://developers.facebook.com/docs/reference/dialogs">More info</a>\n\n<a href="https://developers.facebook.com/docs/reference/api/Comment">Like and Comment on a post</a></string>
    <string name="photo_tip">Photos are by default uploaded to the app\'s album. Specify album_id to upload to specific album. E.g. https://graph.facebook.com/{album_id}/photos.\n\nMore Info: https://developers.facebook.com/docs/reference/api/photo</string>
    <string name="fqlquery">Enter FQL Query:</string>
    <string name="enable_gps_title">Enable GPS</string>
    <string name="enable_gps">Please enable GPS to get nearby places and check-in</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="refresh_token_title">Refresh Token</string>
    <string name="refresh_button">Refresh</string>
    <string name="refresh_button_pending">Refreshing…</string>
    <string name="refresh_token_tip">In most cases the access token should be refreshed silently when the application is running (for example see Hackbook onResume method).</string>
    <string name="refresh_token_binding_error">Binding to the Facebook Android Application failed (is it installed?).</string>
    <string name="access_token_label">Current access token:</string>
    <string name="access_token_expires_label">Token expires at:</string>
    <string name="intro">SAY CHEESE AND CATCHA!</string>
    <string name="picture">Picture</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_streams">Events</string>
    <string name="capture">Launch Camera</string>
    <string name="app_id">147826712064440</string>
    <string name="upload_caption"></string>
    <string name="no_internet_title">Internet Connection</string>
    <string name="no_login_title">Settings Error</string>
    <string name="no_internet">You don\'t have internet connection.</string>
    <string name="album_error_title">Album Settings Error</string>
    <string name="no_log_in">Please login to facebook first</string>
    <string name="inline_preferences">Email Settings</string>
    <string name="title_checkbox_preference">Allow Sending Email after every photo click</string>
    <string name="summary_checkbox_preference">Sends mail after every facebook upload</string>
    <string name="dialog_based_preferences">Facebook Album Settings</string>
    <string name="title_edittext_preference">Add Captions</string>
    <string name="summary_edittext_preference">Every photo will be uploaded with this caption</string>
    <string name="dialog_title_edittext_preference">Enter Caption</string>
    <string name="email_id_preference">Add Email ID</string>
    <string name="summary_id_preference">Default email ID for sending the photo</string>
    <string name="dialog_email_preference">Enter valid email ids with ; separated.</string>
    <string name="fb_title_checkbox_preference">Allow Facebook Upload</string>
    <string name="fb_summary_checkbox_preference">Enable uploading photo to facebook for every photo click</string>
    <string name="upload_default_page">me</string>
    <string name="title_pageedittext_preference">Enter Facebook Page ID</string>
    <string name="summary_pageedittext_preference">Every photo will be uploaded to this page</string>
    <string name="dialog_title_pageedittext_preference">Enter a valid facebook page</string>
    <string name="settings_complete_title">PHOTOBOOTH IS READY TO USE</string>
    <string name="settings_complete_msg">You can upload about 1000 photos per album</string>
    <string name="settings_noAlbum_msg">No Album found. All photos will be uploaded to your wall</string>
    <string name="settings_error_title">PHOTOBOOTH ERROR</string>
    <string name="settings_error_msg">Photobooth not finding any page associated with your account. All photos will be uploaded to your wall.</string>
    <string name="settings_album_selected">ALBUM SELECTED : </string>
    <string name="email_body">This Photo uploaded via PhotoBooth on : </string>
    <string name="logout_title">LOG OUT WARNING !!!</string>
    <string name="complete_logout_msg">If Facebook App installed in this device, Go to Facebook App and Log Out there for complete Log Out.</string>
    <string name="hellonfc">Help to install PhotoBooth via NFC\n</string>
    <string name="hellonfcDesc">Keep this device close to another NFC supported Android device and touch the screen when asked.\n\nThe same application will be installed or launched in other device.</string>
    <string name="menu_promote">Promote via NFC</string>
        <string name="change_locale">Change Locale</string>
    <string name="list_moments_title">Touch a moment to delete</string>
    <string name="send_interactive_button_name">Send Interactive Post</string>
    <string name="sign_in_profile_label">profile scope</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke access</string>
    <string name="share_title">Prefill Text (optional)</string>
    <string name="share_prefill_text">Welcome to the Google+ platform.</string>
    <string name="default_status"/>
    <string name="greeting_status">Welcome, %s.</string>
    <string name="greeting_status_sign_in_required">Sign-in required</string>
    <string name="greeting_status_error">Error signing in: %s.</string>
    <string name="loading_status">Loading…</string>
    <string name="signing_in_status">Signing in with Google+.</string>
    <string name="signed_in_status">Signed in as \"%s\".</string>
    <string name="unknown_person">Unknown</string>
    <string name="signed_out_status">Signed out.</string>
    <string name="revoke_access_status">Revoked access.</string>
    <string name="revoke_access_error_status">Unable to revoke access.</string>
    <string name="plus_write_moment_status">Saving moment</string>
    <string name="plus_write_moment_status_success">Write moment succeeded</string>
    <string name="plus_write_moment_status_cached">Write moment cached</string>
    <string name="plus_write_moment_status_auth_error">Sign in is required</string>
    <string name="plus_write_moment_status_error">Internal error</string>
    <string name="plus_remove_moment_status">Removing moment</string>
    <string name="plus_one_small_name">Small +1 button</string>
    <string name="plus_one_medium_name">Medium +1 button</string>
    <string name="plus_one_tall_name">Tall +1 button</string>
    <string name="plus_one_standard_name">Standard +1 button</string>
    <string name="plus_one_standard_ann_name">Standard +1 button (with inline annotation)</string>
    <string name="plus_example_deep_link_id">/+/mobile/android/</string>
    <string name="plus_example_deep_link_url">
        https://developers.google.com/+/mobile/android/
    </string>
    <string name="plus_generic_error">Sign in with Google is not available.</string>
</resources>